/*
 * GrannyRoomba - Telepresence robot based on a Roomba and Android tablet
 * Copyright (C) 2013 Lorenzo Flueckiger
 *
 * This file is part of GrannyRoomba.
 *
 * GrannyRoomba is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * GrannyRoomba is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with GrannyRoomba.  If not, see <http://www.gnu.org/licenses/>.
 */

syntax = "proto2";

package grannyroomba.messages;

option java_package = "org.flupes.ljf.grannyroomba.messages";
option java_outer_classname = "MotorConfigProto";

message MotorConfig {

	optional float low_limit = 1;
	optional float high_limitl = 2;
	optional float max_velocity = 3;
	optional float max_acceleration = 4;
	optional string name = 5;

}
