syntax = "proto2";

package grannyroomba.messages;

import "Motor.proto";

option java_package = "org.flupes.ljf.grannyroomba.messages";
option java_outer_classname = "SingleAxisProto";

message SingleAxisCmd {

	enum Command {
		SET_MOTOR = 1;
		GET_STATE = 2;
		GET_CONFIG = 3;
	}

	required Command cmd = 1;

	optional MotorMsg msg = 2;

}
